--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "blobfile>=3.0.0",
     "datasets>=3.5.1",
     "matplotlib>=3.10.1",
+    "nest-asyncio>=1.6.0",
     "protobug>=0.2.0",
     "scikit-learn>=1.6.1",
     "streamlit>=1.45.0",
